RESOLVED FIXED274020
REGRESSION (274876@main): [ iOS Debug ] accessibility/text-marker/text-marker-range-stale-node-crash.html is a consistent crash
https://bugs.webkit.org/show_bug.cgi?id=274020
Summary REGRESSION (274876@main): [ iOS Debug ] accessibility/text-marker/text-marker...
Jay Stfleur
Reported 2024-05-10 15:19:31 PDT
Description: accessibility/text-marker/text-marker-range-stale-node-crash.html Is a consistent crash on iOS debug after changes on 274876@main Buildbot URL: https://build.webkit.org/#/builders/940/builds/1517 History: https://results.webkit.org/?suite=layout-tests&test=accessibility%2Ftext-marker%2Ftext-marker-range-stale-node-crash.html&platform=ios&style=debug&recent=false Reproducibility: run-webkit-tests accessibility/text-marker/text-marker-range-stale-node-crash.html --child-process=1 -v --iterations 5 Diff/Image Diff/Crash Log: Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 WebCore 0x34e00a734 WTFCrashWithInfo(int, char const*, char const*, int) + 132 1 WebCore 0x34dbe5e58 WebCore::Node::refAllowingPartiallyDestroyed() const + 208 2 WebCore 0x34de38738 WTF::RefDerefTraitsAllowingPartiallyDestroyed<WebCore::Node>::refIfNotNull(WebCore::Node*) + 44 3 WebCore 0x34de386f4 WTF::RefPtr<WebCore::Node, WTF::RawPtrTraits<WebCore::Node>, WTF::RefDerefTraitsAllowingPartiallyDestroyed<WebCore::Node>>::RefPtr(WebCore::Node*) + 36 4 WebCore 0x34ddd4294 WTF::RefPtr<WebCore::Node, WTF::RawPtrTraits<WebCore::Node>, WTF::RefDerefTraitsAllowingPartiallyDestroyed<WebCore::Node>>::RefPtr(WebCore::Node*) + 36 5 WebCore 0x34ddd4128 WebCore::AXObjectCache::characterOffsetForTextMarkerData(WebCore::TextMarkerData&) + 100 6 WebCore 0x34b7af8f0 -[WebAccessibilityTextMarker characterOffset] + 48 7 WebCore 0x34b7bf984 -[WebAccessibilityObjectWrapper rangeForTextMarkers:] + 320 8 WebCore 0x34b7bfd20 -[WebAccessibilityObjectWrapper textMarkerRangeForMarkers:] + 112 9 WebKitTestRunnerInjectedBundle 0x16181407c WTR::AccessibilityUIElement::textMarkerRangeForMarkers(WTR::AccessibilityTextMarker*, WTR::AccessibilityTextMarker*) + 148 10 WebKitTestRunnerInjectedBundle 0x1618728fc auto decltype(auto) WTR::callFunction<WTR::AccessibilityUIElement, WTR::AccessibilityUIElement, WTF::RefPtr<WTR::AccessibilityTextMarkerRange, WTF::RawPtrTraits<WTR::AccessibilityTextMarkerRange>, WTF::DefaultRefDerefTraits<WTR::AccessibilityTextMarkerRange>> (WTR::AccessibilityTextMarker*, WTR::AccessibilityTextMarker*), WTR::AccessibilityTextMarker*, WTR::AccessibilityTextMarker*>(OpaqueJSContext const*, WTR::AccessibilityUIElement*, WTF::RefPtr<WTR::AccessibilityTextMarkerRange, WTF::RawPtrTraits<WTR::AccessibilityTextMarkerRange>, WTF::DefaultRefDerefTraits<WTR::AccessibilityTextMarkerRange>> (WTR::AccessibilityUIElement::*)(WTR::AccessibilityTextMarker*, WTR::AccessibilityTextMarker*), WTR::AccessibilityTextMarker*, WTR::AccessibilityTextMarker*)::'lambda'(auto&&...)::operator()<WTR::AccessibilityTextMarker*, WTR::AccessibilityTextMarker*>('lambda'(auto&&...)) const + 152
Attachments
Radar WebKit Bug Importer
Comment 1 2024-05-10 15:19:55 PDT
EWS
Comment 2 2024-05-10 15:48:30 PDT
Test gardening commit 278633@main (7a210888c6c3): <https://commits.webkit.org/278633@main> Reviewed commits have been landed. Closing PR #28415 and removing active labels.
Chris Dumez
Comment 3 2024-05-10 18:30:28 PDT
Chris Dumez
Comment 4 2024-05-10 23:17:23 PDT
EWS
Comment 5 2024-05-11 10:17:14 PDT
Committed 278655@main (d7a54ec9f060): <https://commits.webkit.org/278655@main> Reviewed commits have been landed. Closing PR #28427 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.