REGRESSION (274876@main): [ iOS Debug ] accessibility/text-marker/text-marker-range-stale-node-crash.html is a consistent crash https://bugs.webkit.org/show_bug.cgi?id=274020 rdar://127901543

Reviewed by NOBODY (OOPS!).

Use a WeakPtr for TextMarkerData.node.

* Source/WebCore/accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::characterOffsetForTextMarkerData):
(WebCore::AXObjectCache::accessibilityObjectForTextMarkerData):
* Source/WebCore/accessibility/AXTextMarker.cpp:
(WebCore::AXTextMarker::operator CharacterOffset const):
* Source/WebCore/accessibility/AXTextMarker.h:
(WebCore::AXTextMarker::node const):
* Source/WebCore/accessibility/ios/WebAccessibilityObjectWrapperIOS.mm:
(-[WebAccessibilityTextMarker description]):